--- a/src/global.css
+++ b/src/global.css
@@ -71,7 +71,13 @@ html, body {
       min-width: 640px;
     }
   }
- 
+  @variants hover {
+    .hover-gradient:hover {
+      color:#fff;
+      background: linear-gradient(to right, #5A356A, #B34354);
+      border-color: #fff;
+    }
+  }
 }
 .btn:disabled {
   background: #ddd !important;
@@ -104,9 +110,9 @@ html, body {
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    border: 6px solid #f2f2f2;
-    border-top-color: #90caf9;
-    border-bottom-color: #90caf9;
+    border: 6px solid #fff;
+    border-top-color: #5A356A;
+    border-bottom-color: #5A356A;
     -webkit-animation: single4 2.5s infinite ease-in-out;
     animation: single4 2.5s infinite ease-in-out;
   }
