--- a/src/global.css
+++ b/src/global.css
@@ -52,7 +52,7 @@ html, body {
   background: rgb(238,238,238);
 }
 #root {
-  height: 100%;
+  height: 100%;  min-height: 100%;
 }
 
 @layer components {
