--- a/src/global.css
+++ b/src/global.css
@@ -2,42 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-@font-face {
-  font-family: 'Noto Sans KR';
-  font-style: normal;
-  font-weight: 100;
-  src: local('Noto Sans KR'), url(/src/assets/fonts/NotoSansCJKkr-Light.woff2) format('woff2'), url(/src/assets/fonts/NotoSansCJKkr-Light.woff) format('woff'),
-    url(/src/assets/fonts/NotoSansCJKkr-Light.otf) format('opentype');
-}
-@font-face {
-  font-family: 'Noto Sans KR';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Noto Sans KR'), url(/src/assets/fonts/NotoSansCJKkr-Regular.woff2) format('woff2'),
-    url(/src/assets/fonts/NotoSansCJKkr-Regular.woff) format('woff'), url(/src/assets/fonts/NotoSansCJKkr-Regular.otf) format('opentype');
-}
-@font-face {
-  font-family: 'Noto Sans KR';
-  font-style: normal;
-  font-weight: 500;
-  src: local('Noto Sans KR'), url(/src/assets/fonts/NotoSansCJKkr-Medium.woff2) format('woff2'),
-    url(/src/assets/fonts/NotoSansCJKkr-Medium.woff) format('woff'), url(/src/assets/fonts/NotoSansCJKkr-Medium.otf) format('opentype');
-}
-@font-face {
-  font-family: 'Noto Sans KR';
-  font-style: normal;
-  font-weight: 600;
-  src: local('Noto Sans KR'), url(/src/assets/fonts/NotoSansCJKkr-Bold.woff2) format('woff2'), url(/src/assets/fonts/NotoSansCJKkr-Bold.woff) format('woff'),
-    url(/src/assets/fonts/NotoSansCJKkr-Bold.otf) format('opentype');
-}
-@font-face {
-  font-family: 'Noto Sans KR';
-  font-style: normal;
-  font-weight: 900;
-  src: local('Noto Sans KR'), url(/src/assets/fonts/NotoSansCJKkr-Black.woff2) format('woff2'), url(/src/assets/fonts/NotoSansCJKkr-Black.woff) format('woff'),
-    url(/src/assets/fonts/NotoSansCJKkr-Black.otf) format('opentype');
-}
+@import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
 
+* { 
+font-family: Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, 'Helvetica Neue', 'Segoe UI', 'Apple SD Gothic Neo', 'Noto Sans KR', 'Malgun Gothic', sans-serif;
+}
 html {
   font-size: -webkit-calc(6px + 0.5vw);
   font-size: calc(6px + 0.5vw);
@@ -45,22 +14,30 @@ html {
 html, body {
   height: 100%;
   min-height: 100%;
-  font-weight: 400;
-  font-family: 'Noto Sans', sans-serif;
-  font-family: 'Noto Sans KR', sans-serif;
-  color: #000;
-  background: rgb(238,238,238);
+  color: #fff;
+  background: #000;
 }
 #root {
   height: 100%;  min-height: 100%;
 }
-
+.translate-center {
+  transform: translate(-50%, -50%);
+}
+.bg-card-gray {
+  background:#28282B
+} 
+.btn-border-line {
+  border: 1px solid #A24159;
+}
 @layer components {
   input {
    @apply border-2 w-full px-5 py-3
   }
   .btn {
     @apply flex items-center justify-center w-full rounded-full bg-purple-600 text-white h-28 text-3xl font-bold btn-gradient
+  }
+  .btn-line {
+    @apply flex items-center justify-center w-full rounded-full text-white h-28 text-3xl font-bold btn-border-line
   }
  
   .btn-text {
@@ -69,6 +46,9 @@ html, body {
   @variants responsive {
     .min-w-640 {
       min-width: 640px;
+    }
+    .max-w-640 {
+      max-width: 640px;
     }
   }
   @variants hover {
@@ -80,14 +60,15 @@ html, body {
   }
 }
 .btn:disabled {
-  background: #ddd !important;
+  color:#6B7280;
+  background: #E5E7EB !important;
 }
 .min-w-320 {
   min-width: 320px;
 }
 
 .data-number-list li:before{
-  color: rgba(23, 23, 29, 0.7);
+  color: #fff;
   width: 28px;
   content: attr(data-index);
   display: inline-block;
